# Py_iRobot_OptiTrack

./: .gitignore  README.md  action.msg  irobot.launch  optitrack.launch  plan_execution.py  plot_workspace.py  read_optitrack.py  simple_irobot_control_optitrack.py  step.txt
MDP_TG/: CMakeLists.txt  action_execution.py
MDP_TG/src/: action_execution.py  load_model.py  plan_execution.py  robot_control.py
irobot/: CMakeLists.txt  package.xml
irobot/src/: driver.py
irobot/src/irobotCreate/: create.py
irobot_create_2_1/: README.txt  irobot.launch  mainpage.dox  manifest.xml
irobot_create_2_1/msg/: SensorPacket.msg
irobot_create_2_1/msg_gen/cpp/include/irobot_create_2_1/: SensorPacket.h
irobot_create_2_1/msg_gen/lisp/: SensorPacket.lisp  _package.lisp  _package_SensorPacket.lisp  irobot_create_2_1-msg.asd
irobot_create_2_1/src/irobot_create_2_1/msg/: _SensorPacket.py  __init__.py
irobot_create_2_1/src/irobot_create_2_1/srv/: _Brake.py  _Circle.py  _Demo.py  _Leds.py  _Tank.py  _Turn.py  __init__.py
irobot_create_2_1/srv/: Brake.srv  Circle.srv  Demo.srv  Leds.srv  Tank.srv  Turn.srv
irobot_create_2_1/srv_gen/cpp/include/irobot_create_2_1/: Brake.h  Circle.h  Demo.h  Leds.h  Tank.h  Turn.h
irobot_create_2_1/srv_gen/lisp/: Brake.lisp  Circle.lisp  Demo.lisp  Leds.lisp  Tank.lisp  Turn.lisp  _package.lisp  _package_Brake.lisp  _package_Circle.lisp  _package_Demo.lisp  _package_Leds.lisp  _package_Tank.lisp  _package_Turn.lisp  irobot_create_2_1-srv.asd
mdp_tg/: CMakeLists.txt  package.xml
mdp_tg/msg/: UnicycleControl.msg  cell_pose.msg  confirmation.msg  control.msg  status.msg
mdp_tg/src/: action_execution.py  best_plan.p  model.py  motion_mdp_edges.p  plan_execution.py  plot_workspace.py  prod_dra_edges.p  read_optitrack.py  results_XX.p  results_X_U.p  simple_irobot_control_optitrack.py  simple_irobot_control_optitrack.py~  ws_model.p
mdp_tg/src/risk_0_GFabc/: best_plan.p  prod_dra_edges.p  results_XX.p  results_X_U.p  ws_model.p
mdp_tg/src/risk_0_GFabc_V0/: motion_mdp_edges.p  results_XX.p  results_X_U.p
mdp_tg/src/risk_0_GFabc_V1/: best_plan.p  results_XX.p  results_X_U.p  ws_model.p
mdp_tg/src/risk_2_GFabc_V1/: motion_mdp_edges.p  prod_dra_edges.p  results_X_U.p
optitrack/: optitrack.launch  optitrack.launch~
optitrack/optitrack/: CMakeLists.txt  package.xml
optitrack/optitrack_driver/: CMakeLists.txt  mainpage.dox  package.xml
optitrack/optitrack_driver/msg/: OptiTrackData.msg
optitrack/optitrack_driver/src/: Optitrack.cpp
